syntax = "proto3";

package agent.v1;

import "agent/v1/utils.proto";
import "agent/v1/selected_context.proto";
import "agent/v1/mcp.proto";
import "agent/v1/cursor_packages.proto";
import "agent/v1/exec.proto";
import "agent/v1/kv.proto";
import "agent/v1/shell_tool.proto";
import "agent/v1/delete_tool.proto";
import "agent/v1/delete_exec.proto";
import "agent/v1/glob_tool.proto";
import "agent/v1/grep_tool.proto";
import "agent/v1/read_tool.proto";
import "agent/v1/todo_tool.proto";
import "agent/v1/edit_tool.proto";
import "agent/v1/ls_tool.proto";
import "agent/v1/read_lints_tool.proto";
import "agent/v1/mcp_tool.proto";
import "agent/v1/semsearch_tool.proto";
import "agent/v1/create_plan_tool.proto";
import "agent/v1/web_search_tool.proto";
import "agent/v1/subagents.proto";
import "agent/v1/mcp_resource_tool.proto";
import "agent/v1/apply_agent_diff_tool.proto";
import "agent/v1/ask_question_tool.proto";
import "agent/v1/fetch_tool.proto";
import "agent/v1/switch_mode_tool.proto";
import "agent/v1/exa_search_tool.proto";
import "agent/v1/exa_fetch_tool.proto";
import "agent/v1/generate_image_tool.proto";
import "agent/v1/record_screen_tool.proto";
import "agent/v1/computer_use_tool.proto";
import "agent/v1/write_shell_stdin_tool.proto";
import "agent/v1/reflect_tool.proto";
import "agent/v1/setup_vm_environment_tool.proto";
import "agent/v1/start_grind_execution_tool.proto";
import "agent/v1/start_grind_planning_tool.proto";
import "agent/v1/web_fetch_tool.proto";
import "agent/v1/report_bugfix_results_tool.proto";
import "agent/v1/request_context_exec.proto";
import "agent/v1/shell_exec.proto";

enum AgentMode {
  AGENT_MODE_UNSPECIFIED = 0;
  AGENT_MODE_AGENT = 1;
  AGENT_MODE_ASK = 2;
  AGENT_MODE_PLAN = 3;
  AGENT_MODE_DEBUG = 4;
  AGENT_MODE_TRIAGE = 5;
  AGENT_MODE_PROJECT = 6;
}

enum ArtifactUploadStatus {
  ARTIFACT_UPLOAD_STATUS_UNSPECIFIED = 0;
  ARTIFACT_UPLOAD_STATUS_NOT_STARTED = 1;
  ARTIFACT_UPLOAD_STATUS_IN_PROGRESS = 2;
  ARTIFACT_UPLOAD_STATUS_COMPLETED = 3;
  ARTIFACT_UPLOAD_STATUS_FAILED = 4;
}

enum SimulatedMsgReason {
  SIMULATED_MSG_REASON_UNSPECIFIED = 0;
  SIMULATED_MSG_REASON_PLAN_EXECUTION = 1;
}

enum ArtifactUploadDispatchStatus {
  ARTIFACT_UPLOAD_DISPATCH_STATUS_UNSPECIFIED = 0;
  ARTIFACT_UPLOAD_DISPATCH_STATUS_ACCEPTED = 1;
  ARTIFACT_UPLOAD_DISPATCH_STATUS_REJECTED = 2;
  ARTIFACT_UPLOAD_DISPATCH_STATUS_SKIPPED_ALREADY_IN_PROGRESS = 3;
}

enum Frame_Kind {
  KIND_UNSPECIFIED = 0;
  KIND_REQUEST = 1;
  KIND_RESPONSE = 2;
  KIND_ERROR = 3;
}

enum BugbotDeeplinkEventKind {
  BUGBOT_DEEPLINK_EVENT_KIND_UNSPECIFIED = 0;
  BUGBOT_DEEPLINK_EVENT_KIND_CLICKED = 1;
  BUGBOT_DEEPLINK_EVENT_KIND_HANDLED_DIALOG_SHOWN = 2;
  BUGBOT_DEEPLINK_EVENT_KIND_HANDLED_CHAT_CREATED = 3;
  BUGBOT_DEEPLINK_EVENT_KIND_ERROR = 4;
  BUGBOT_DEEPLINK_EVENT_KIND_HANDLED_FIX_IN_WEB = 5;
}

enum ClientOS {
  CLIENT_OS_UNSPECIFIED = 0;
  CLIENT_OS_WINDOWS = 1;
  CLIENT_OS_MACOS = 2;
  CLIENT_OS_LINUX = 3;
}

message ToolCall {
  oneof tool {
    ShellToolCall shell_tool_call = 1;
    DeleteToolCall delete_tool_call = 3;
    GlobToolCall glob_tool_call = 4;
    GrepToolCall grep_tool_call = 5;
    ReadToolCall read_tool_call = 8;
    UpdateTodosToolCall update_todos_tool_call = 9;
    ReadTodosToolCall read_todos_tool_call = 10;
    EditToolCall edit_tool_call = 12;
    LsToolCall ls_tool_call = 13;
    ReadLintsToolCall read_lints_tool_call = 14;
    McpToolCall mcp_tool_call = 15;
    SemSearchToolCall sem_search_tool_call = 16;
    CreatePlanToolCall create_plan_tool_call = 17;
    WebSearchToolCall web_search_tool_call = 18;
    TaskToolCall task_tool_call = 19;
    ListMcpResourcesToolCall list_mcp_resources_tool_call = 20;
    ReadMcpResourceToolCall read_mcp_resource_tool_call = 21;
    ApplyAgentDiffToolCall apply_agent_diff_tool_call = 22;
    AskQuestionToolCall ask_question_tool_call = 23;
    FetchToolCall fetch_tool_call = 24;
    SwitchModeToolCall switch_mode_tool_call = 25;
    ExaSearchToolCall exa_search_tool_call = 26;
    ExaFetchToolCall exa_fetch_tool_call = 27;
    GenerateImageToolCall generate_image_tool_call = 28;
    RecordScreenToolCall record_screen_tool_call = 29;
    ComputerUseToolCall computer_use_tool_call = 30;
    WriteShellStdinToolCall write_shell_stdin_tool_call = 31;
    ReflectToolCall reflect_tool_call = 32;
    SetupVmEnvironmentToolCall setup_vm_environment_tool_call = 33;
    TruncatedToolCall truncated_tool_call = 34;
    StartGrindExecutionToolCall start_grind_execution_tool_call = 35;
    StartGrindPlanningToolCall start_grind_planning_tool_call = 36;
    WebFetchToolCall web_fetch_tool_call = 37;
    ReportBugfixResultsToolCall report_bugfix_results_tool_call = 38;
  }
}

message TruncatedToolCallArgs {
}

message TruncatedToolCallSuccess {
}

message TruncatedToolCallError {
  string error = 1;
}

message TruncatedToolCallResult {
  oneof result {
    TruncatedToolCallSuccess success = 1;
    TruncatedToolCallError error = 2;
  }
}

message TruncatedToolCall {
  bytes original_step_blob_id = 1;
  TruncatedToolCallArgs args = 2;
  TruncatedToolCallResult result = 3;
}

message ToolCallDelta {
  oneof delta {
    ShellToolCallDelta shell_tool_call_delta = 1;
    TaskToolCallDelta task_tool_call_delta = 2;
    EditToolCallDelta edit_tool_call_delta = 3;
  }
}

message ConversationStep {
  oneof message {
    AssistantMessage assistant_message = 1;
    ToolCall tool_call = 2;
    ThinkingMessage thinking_message = 3;
  }
}

message ConversationAction {
  oneof action {
    CancelSubagentAction cancel_subagent_action = 10;
    UserMessageAction user_message_action = 1;
    ResumeAction resume_action = 2;
    CancelAction cancel_action = 3;
    SummarizeAction summarize_action = 4;
    ShellCommandAction shell_command_action = 5;
    StartPlanAction start_plan_action = 6;
    ExecutePlanAction execute_plan_action = 7;
    AsyncAskQuestionCompletionAction async_ask_question_completion_action = 8;
  }
}

message UserMessageAction {
  UserMessage user_message = 1;
  RequestContext request_context = 2;
  optional bool send_to_interaction_listener = 3;
}

message CancelAction {
}

message ResumeAction {
  RequestContext request_context = 2;
}

message SummarizeAction {
}

message ShellCommandAction {
  ShellCommand shell_command = 1;
  string exec_id = 2;
}

message StartPlanAction {
  UserMessage user_message = 1;
  RequestContext request_context = 2;
  bool is_spec = 3;
}

message ExecutePlanAction {
  RequestContext request_context = 1;
  optional ConversationPlan plan = 2;
  optional string plan_file_uri = 3;
  optional string plan_file_content = 4;
}

message UserMessage {
  string text = 1;
  string message_id = 2;
  optional SelectedContext selected_context = 3;
  AgentMode mode = 4;
  optional bool is_simulated_msg = 5;
  optional string best_of_n_group_id = 6;
  optional bool try_use_best_of_n_promotion = 7;
  optional string rich_text = 8;
  optional SimulatedMsgReason simulated_msg_reason = 9;
  bytes conversation_state_blob_id = 10;
}

message AssistantMessage {
  string text = 1;
}

message ThinkingMessage {
  string text = 1;
  uint32 duration_ms = 2;
}

message ShellCommand {
  string command = 1;
}

message ShellOutput {
  string stdout = 1;
  string stderr = 2;
  int32 exit_code = 3;
}

message ConversationTurn {
  oneof turn {
    AgentConversationTurn agent_conversation_turn = 1;
    ShellConversationTurn shell_conversation_turn = 2;
  }
}

message ConversationPlan {
  string plan = 1;
}

message ConversationTurnStructure {
  oneof turn {
    AgentConversationTurnStructure agent_conversation_turn = 1;
    ShellConversationTurnStructure shell_conversation_turn = 2;
  }
}

message AgentConversationTurn {
  UserMessage user_message = 1;
  repeated ConversationStep steps = 2;
  optional string request_id = 3;
}

message AgentConversationTurnStructure {
  bytes user_message = 1;
  repeated bytes steps = 2;
  optional string request_id = 3;
}

message ShellConversationTurn {
  ShellCommand shell_command = 1;
  ShellOutput shell_output = 2;
}

message ShellConversationTurnStructure {
  bytes shell_command = 1;
  bytes shell_output = 2;
}

message ConversationSummary {
  string summary = 1;
}

message ConversationSummaryArchive {
  repeated bytes summarized_messages = 1;
  string summary = 2;
  uint32 window_tail = 3;
  bytes summary_message = 4;
}

message ConversationTokenDetails {
  uint32 used_tokens = 1;
  uint32 max_tokens = 2;
}

message FileState {
  optional string content = 1;
  optional string initial_content = 2;
}

message FileStateStructure {
  optional bytes content = 1;
  optional bytes initial_content = 2;
}

message ConversationState {
  repeated string root_prompt_messages_json = 1;
  repeated ConversationTurn turns = 8;
  repeated TodoItem todos = 3;
  repeated string pending_tool_calls = 4;
  ConversationTokenDetails token_details = 5;
  optional ConversationSummary summary = 6;
  optional ConversationPlan plan = 7;
  optional ConversationSummaryArchive summary_archive = 9;
  map<string, FileState> file_states = 10;
  repeated ConversationSummaryArchive summary_archives = 11;
}

message ConversationStateStructure {
  repeated bytes turns_old = 2;
  repeated bytes root_prompt_messages_json = 1;
  repeated bytes turns = 8;
  repeated bytes todos = 3;
  repeated string pending_tool_calls = 4;
  ConversationTokenDetails token_details = 5;
  optional bytes summary = 6;
  optional bytes plan = 7;
  repeated string previous_workspace_uris = 9;
  optional AgentMode mode = 10;
  optional bytes summary_archive = 11;
  map<string, bytes> file_states = 12;
  map<string, FileStateStructure> file_states_v2 = 15;
  repeated bytes summary_archives = 13;
  repeated StepTiming turn_timings = 14;
  map<string, SubagentPersistedState> subagent_states = 16;
  uint32 self_summary_count = 17;
  repeated string read_paths = 18;
}

message ThinkingDetails {
}

message ApiKeyCredentials {
  string api_key = 1;
  optional string base_url = 2;
}

message AzureCredentials {
  string api_key = 1;
  string base_url = 2;
  string deployment = 3;
}

message BedrockCredentials {
  string access_key = 1;
  string secret_key = 2;
  string region = 3;
  optional string session_token = 4;
}

message ModelDetails {
  string model_id = 1;
  string display_model_id = 3;
  string display_name = 4;
  string display_name_short = 5;
  repeated string aliases = 6;
  optional ThinkingDetails thinking_details = 2;
  optional bool max_mode = 7;
  oneof credentials {
    ApiKeyCredentials api_key_credentials = 8;
    AzureCredentials azure_credentials = 9;
    BedrockCredentials bedrock_credentials = 10;
  }
}

message RequestedModel {
  string model_id = 1;
  bool max_mode = 2;
  repeated RequestedModel_ModelParameterValue parameters = 3;
  oneof credentials {
    ApiKeyCredentials api_key_credentials = 4;
    AzureCredentials azure_credentials = 5;
    BedrockCredentials bedrock_credentials = 6;
  }
}

message RequestedModel_ModelParameterValue {
  string id = 1;
  string value = 2;
}

message AgentRunRequest {
  ConversationStateStructure conversation_state = 1;
  ConversationAction action = 2;
  ModelDetails model_details = 3;
  optional RequestedModel requested_model = 9;
  McpTools mcp_tools = 4;
  optional string conversation_id = 5;
  optional McpFileSystemOptions mcp_file_system_options = 6;
  optional SkillOptions skill_options = 7;
  optional string custom_system_prompt = 8;
}

message TextDeltaUpdate {
  string text = 1;
}

message ToolCallStartedUpdate {
  string call_id = 1;
  ToolCall tool_call = 2;
  string model_call_id = 3;
}

message ToolCallCompletedUpdate {
  string call_id = 1;
  ToolCall tool_call = 2;
  string model_call_id = 3;
}

message ToolCallDeltaUpdate {
  string call_id = 1;
  ToolCallDelta tool_call_delta = 2;
  string model_call_id = 3;
}

message PartialToolCallUpdate {
  string call_id = 1;
  ToolCall tool_call = 2;
  string args_text_delta = 3;
  string model_call_id = 4;
}

message ThinkingDeltaUpdate {
  string text = 1;
  optional ThinkingStyle thinking_style = 2;
}

message ThinkingCompletedUpdate {
  int32 thinking_duration_ms = 1;
}

message TokenDeltaUpdate {
  int32 tokens = 1;
}

message SummaryUpdate {
  string summary = 1;
}

message SummaryStartedUpdate {
}

message HeartbeatUpdate {
}

message SummaryCompletedUpdate {
  optional string hook_message = 1;
}

message ShellOutputDeltaUpdate {
  oneof event {
    ShellStreamStdout stdout = 1;
    ShellStreamStderr stderr = 2;
    ShellStreamExit exit = 3;
    ShellStreamStart start = 4;
  }
}

message TurnEndedUpdate {
}

message UserMessageAppendedUpdate {
  UserMessage user_message = 1;
}

message StepStartedUpdate {
  uint64 step_id = 1;
}

message StepCompletedUpdate {
  uint64 step_id = 1;
  int64 step_duration_ms = 2;
}

message InteractionUpdate {
  oneof message {
    TextDeltaUpdate text_delta = 1;
    PartialToolCallUpdate partial_tool_call = 7;
    ToolCallDeltaUpdate tool_call_delta = 15;
    ToolCallStartedUpdate tool_call_started = 2;
    ToolCallCompletedUpdate tool_call_completed = 3;
    ThinkingDeltaUpdate thinking_delta = 4;
    ThinkingCompletedUpdate thinking_completed = 5;
    UserMessageAppendedUpdate user_message_appended = 6;
    TokenDeltaUpdate token_delta = 8;
    SummaryUpdate summary = 9;
    SummaryStartedUpdate summary_started = 10;
    SummaryCompletedUpdate summary_completed = 11;
    ShellOutputDeltaUpdate shell_output_delta = 12;
    HeartbeatUpdate heartbeat = 13;
    TurnEndedUpdate turn_ended = 14;
    StepStartedUpdate step_started = 16;
    StepCompletedUpdate step_completed = 17;
  }
}

message InteractionQuery {
  uint32 id = 1;
  oneof query {
    WebSearchRequestQuery web_search_request_query = 2;
    AskQuestionInteractionQuery ask_question_interaction_query = 3;
    SwitchModeRequestQuery switch_mode_request_query = 4;
    ExaSearchRequestQuery exa_search_request_query = 5;
    ExaFetchRequestQuery exa_fetch_request_query = 6;
    CreatePlanRequestQuery create_plan_request_query = 7;
    SetupVmEnvironmentArgs setup_vm_environment_args = 8;
    WebFetchRequestQuery web_fetch_request_query = 9;
  }
}

message InteractionResponse {
  uint32 id = 1;
  oneof result {
    WebSearchRequestResponse web_search_request_response = 2;
    AskQuestionInteractionResponse ask_question_interaction_response = 3;
    SwitchModeRequestResponse switch_mode_request_response = 4;
    ExaSearchRequestResponse exa_search_request_response = 5;
    ExaFetchRequestResponse exa_fetch_request_response = 6;
    CreatePlanRequestResponse create_plan_request_response = 7;
    SetupVmEnvironmentResult setup_vm_environment_result = 8;
    WebFetchRequestResponse web_fetch_request_response = 9;
  }
}

message ClientHeartbeat {
}

message PrewarmRequest {
  ModelDetails model_details = 1;
  optional RequestedModel requested_model = 9;
  optional string conversation_id = 2;
  ConversationStateStructure conversation_state = 3;
  McpTools mcp_tools = 4;
  optional McpFileSystemOptions mcp_file_system_options = 5;
  optional string best_of_n_group_id = 6;
  optional bool try_use_best_of_n_promotion = 7;
  optional string custom_system_prompt = 8;
}

message AgentClientMessage {
  oneof message {
    AgentRunRequest run_request = 1;
    ExecClientMessage exec_client_message = 2;
    ExecClientControlMessage exec_client_control_message = 5;
    KvClientMessage kv_client_message = 3;
    ConversationAction conversation_action = 4;
    InteractionResponse interaction_response = 6;
    ClientHeartbeat client_heartbeat = 7;
    PrewarmRequest prewarm_request = 8;
  }
}

message AgentServerMessage {
  oneof message {
    InteractionUpdate interaction_update = 1;
    ExecServerMessage exec_server_message = 2;
    ExecServerControlMessage exec_server_control_message = 5;
    ConversationStateStructure conversation_checkpoint_update = 3;
    KvServerMessage kv_server_message = 4;
    InteractionQuery interaction_query = 7;
  }
}

message NameAgentRequest {
  string user_message = 1;
}

message NameAgentResponse {
  string name = 1;
}

message GetUsableModelsRequest {
  repeated string custom_model_ids = 1;
}

message GetUsableModelsResponse {
  repeated ModelDetails models = 1;
}

message GetDefaultModelForCliRequest {
}

message GetDefaultModelForCliResponse {
  ModelDetails model = 1;
}

message GetAllowedModelIntentsRequest {
}

message GetAllowedModelIntentsResponse {
  repeated string model_intents = 1;
}

message IdeEditorsStateFile {
  string relative_path = 1;
  string absolute_path = 2;
  optional bool is_currently_focused = 3;
  optional int32 current_line_number = 4;
  optional string current_line_text = 5;
  optional int32 line_count = 6;
}

message IdeEditorsStateLite {
  repeated IdeEditorsStateFile recently_viewed_files = 1;
}

message BidiRequestId {
  string request_id = 1;
}

message Frame {
  string id = 1;
  string method = 2;
  bytes data = 3;
  Frame_Kind kind = 4;
  string error = 5;
}

message Empty {
}
